syntax = "proto3";

package gameplay_service;

message ClaimDailyRewardRequest {
    string userId = 1;
}