syntax = "proto3";

package gameplay;

message HelpUsePesticideRequest {
    string userId = 1;
    string neighborUserId = 2;
}