syntax = "proto3";

package gameplay_service;

message ThiefAnimalProductRequest {
    string userId = 1;
    string placedItemAnimalId = 2;
}

message ThiefAnimalProductResponse {
    int32 quantity = 1;
}