syntax = "proto3";

package gameplay_service;

message RetainProductRequest {
    string userId = 1;
    string inventoryId = 2;
}