syntax = "proto3";

import "google/protobuf/empty.proto";

package gameplay_service;

message UseFertilizerRequest {
    string userId = 1;
    string placedItemTileId = 2;
    string inventorySupplyId = 3;
}