syntax = "proto3";

import "google/protobuf/empty.proto";

package gameplay_service;

message UseHerbicideRequest {
    string userId = 1;
    string placedItemTileId = 2;
}