syntax = "proto3";

import "google/protobuf/empty.proto";

package farming;

message UsePesticideRequest {
    string userId = 1;
    string placedItemTileId = 2;
}