syntax = "proto3";

package gameplay_service;

message MoveRequest {
    string userId = 1;
    string placedItemId = 2;
    Position position = 3;
}