syntax = "proto3";

package gameplay_service;

message UpdateTutorialRequest {
    string userId = 1;
}