syntax = "proto3";

package gameplay_service;

message BuyTileRequest {
    string userId = 1;
    Position position = 2;
}

message BuyTileResponse {
    string placedItemId = 1;
}

