syntax = "proto3";

package gameplay_service;

message ConstructBuildingRequest {
    string userId = 1;
    string buildingId = 2;
    Position position = 3;
}
