syntax = "proto3";

package gameplay_service;

message UpgradeBuildingRequest {
    string userId = 1;
    string placedItemBuildingId = 2;
}

